Add LWA TBN related examples and scripts to repo
From 9aa659a (package):
======================

(*) Add epic/examples/ioparms/LWA_TBN_input_file_parameters.yaml to
repo
(*) Add scripts/convert_LWA_TBN_data_to_EPIC_format.py to repo
(*) Minor updates to
epic/examples/ioparms/MWAVCS_input_file_parameters.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ scripts/*.pyc
 # /main/LWA_OV_RFI_plots.py~
 # /main/convert_data_from_LWAOV_to_EPIC.py~
 /scripts/convert_MWAVCS_data_to_EPIC_format.py~
+/epic/examples/ioparms/LWASV_TBN_input_file_parameters.yaml~
+/epic/examples/ioparms/LWA_TBN_input_file_parameters.yaml~
+/epic/examples/ioparms/MWAVCS_input_file_parameters.yaml~
