--- a/epic/examples/ioparms/MWAVCS_input_file_parameters.yaml
+++ b/epic/examples/ioparms/MWAVCS_input_file_parameters.yaml
@@ -1,3 +1,7 @@
+##### IMPORTANT INFORMATION #####
+##### DO NOT MODIFY THIS FILE #####
+##### MAKE A COPY OF THIS FILE AND CUSTOMIZE #####
+
 ########## Directory information #########
 
 directory   :
