Add run_EPIC.py and EPIC_parms.yaml to repo
From c457a8b (extimg):
=====================

(*) Add epic/examples/imagingparms/EPIC_parms.yaml and
scripts/run_EPIC.py to repo

In examples/ioparms/LWA_TBN_input_file_parameters.yaml,

(*) Minor bug fixes - append '/' to directories

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ scripts/*.pyc
 /epic/examples/ioparms/LWASV_TBN_input_file_parameters.yaml~
 /epic/examples/ioparms/LWA_TBN_input_file_parameters.yaml~
 /epic/examples/ioparms/MWAVCS_input_file_parameters.yaml~
+/epic/examples/imagingparms/EPIC_parms.yaml~
