Add parallelization option in Image.imagr()
From f40b28a (master):
=====================

In epic/antenna_array.py,

(*) In member function imagr() of class Image, add input keyword
nproc to invoke parallel processing in calls to 2D FFT and IFFT via
DSP module in AstroUtils.
(*) In member function imagr() of class Image, make both parallel and
non-parallel calls to 2D FFT and IFFT available

In epic/examples/imagingparms/EPIC_parms.yaml,

(*) Add option to use parallelization in calls to Image.imagr() via
new input option imgnproc

In scripts/run_EPIC.py,

(*) Read input imgnproc from input config YAML file
(*) Include option imgnproc in call to Image.imagr()

--- a/epic/examples/imagingparms/EPIC_parms.yaml
+++ b/epic/examples/imagingparms/EPIC_parms.yaml
@@ -158,3 +158,17 @@ procinfo    :
     t_acc       : 0.1024
                                 # Accumulation time interval (in
                                 # seconds)
+
+    imgnproc    : null
+                                # Number of parallel processes to be
+                                # used in call to imagr().
+                                # Default=null will set nproc to
+                                # number of processors minus 1.
+                                # Otherwise must be set to an integer
+                                # greater than 0
+    
+
+
+
+
+
