Add parallel process option for evalAutoCorrCube()
From a46fde5 (parallel):
=======================

In epic/antenna_array.py,

(*) Add input keyword nproc in member function makeAutoCorrCube() of
class AntennaArray. Update member function docstring accordingly.
(*) Add input keyword nproc in member function evalAutoCorr() of class
Image. Update member function docstring accordingly. Pass nproc in
call to member function makeAutoCorrCube() of class AntennaArray.

In epic/examples/imagingparms/EPIC_parms.yaml,

(*) Add option acorrgrid_nproc to specify number of parallel processes
to be used in evaluation of autocorrelation cube

In scripts/run_EPIC.py,

(*) Read option acorrgrid_nproc to specify number of parallel processes
to be used in evaluation of autocorrelation cube and pass in call to
member function evalAutoCorrCube() of class Image

--- a/epic/examples/imagingparms/EPIC_parms.yaml
+++ b/epic/examples/imagingparms/EPIC_parms.yaml
@@ -167,7 +167,17 @@ procinfo    :
                                 # Otherwise must be set to an integer
                                 # greater than 0
     
-
+    acorrgrid_nproc : 1
+                                # Number of parallel processes to be
+                                # used in call to evalAutoCorr().
+                                # Default=1 will set nproc to 1
+                                # (serial processing). Otherwise must
+                                # be set to an integer greater than 0,
+                                # number of processors will be set
+                                # to nproc-1.
+                                # *** Not advisable to parallelize
+                                # because of memory requirements and
+                                # hence slower than serial ***
 
 
 
