Remove hard-coding of lookup file in run_EPIC.py
From 1739331 (master):
=====================

In epic/examples/imagingparms/EPIC_parms.yaml,

(*) Add option 'updatenproc' under 'procinfo' to enable choice of
serial or parallel processing of updates
(*) Update description of 'shape' parameter in 'antinfo'

In scripts/run_EPIC.py,

(*) Read updatenproc parameter and set up parallelization parameters
parallelize_update and updatenproc to be passed to aar.update()
(*) Use variable lookup_file in place of variable ant_lookupinfo in
initializing Aperture()
(*) Remove hardcoded lookup file and instead set adict['wtsinfo']
depending on the lookup_file parameter

--- a/epic/examples/imagingparms/EPIC_parms.yaml
+++ b/epic/examples/imagingparms/EPIC_parms.yaml
@@ -77,6 +77,10 @@ antinfo   :
                                 # 'analytic'
 
     shape       : 'rect'
+                                # Shape of aperture, used only when
+                                # illumination is set to 'analytic'
+                                # Accepted values are 'rect' and
+                                # 'circ'
 
     xsize       : 3.0
                                 # Size along x-dimension (primary
@@ -158,6 +162,14 @@ procinfo    :
     t_acc       : 0.1024
                                 # Accumulation time interval (in
                                 # seconds)
+
+    updatenproc : 1
+                                # Number of parallel processes to be
+                                # used in call to update().
+                                # Default=null will set nproc to
+                                # number of processors minus 1.
+                                # Otherwise must be set to an integer
+                                # greater than 0
 
     imgnproc    : null
                                 # Number of parallel processes to be
