Perform h5repack after specified time interval
From fdf7746 (master):
=====================

In epic/examples/imagingparms/EPIC_parms.yaml,

(*) Add option h5repack_dtime to specify time over which h5repack
needs to be invoked

In scripts/run_EPIC.py,

(*) Invoke h5repack after specified time interval, and perform this
action after removing autocorr

--- a/epic/examples/imagingparms/EPIC_parms.yaml
+++ b/epic/examples/imagingparms/EPIC_parms.yaml
@@ -42,6 +42,13 @@ dirstruct   :
                                 # more info. Accepted values are
                                 # 'FSM_AGGR' (default), 'PAGE', 'AGGR',
                                 # and 'NONE'
+
+    h5repack_dtime  : null
+                                # Time interval (in seconds) after
+                                # which h5repack is to be applied.
+                                # If set to null (default), use
+                                # t_acc. Otherwise, time interval
+                                # must be a positive scalar
                                 
 ########## Array parameters ##########
 
